[tool.poetry]
name = "mxcubecore"
version = "1.35.0"
license = "LGPL-3.0-or-later"
description = "Core libraries for the MXCuBE application"
authors = ["The MXCuBE collaboration <mxcube@esrf.fr>"]
maintainers = [
    "Marcus Oscarsson <mxcube@esrf.fr>",
    "Rasmus H. Fogh <rhfogh@globalphasing.com>",
    "Antonia Beteva <beteva@esrf.fr>",
]
readme = "README.md"
homepage = "http://github.com/mxcube/mxcubecore"
repository = "http://github.com/mxcube/mxcubecore"
documentation = ""
keywords = ["mxcube", "mxcube3", "mxcubecore"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
typing-extensions = "^4.3.0"
tomli = { version = "^2.0.1", python = "<=3.10" }
gevent = "^21.12.0"
greenlet = "^1.1.3"
jsonpickle = "^2.2.0"
jsonschema = "^4.17.1"
lxml = "^4.9.1"
matplotlib = [ { version = "3.5.3", python = "3.7" }, { version = "^3.6.2", python = ">=3.8" } ]
numpy = [ { version = "1.21.6", python = "3.7" }, { version = "^1.23.5", python = ">=3.8" } ]
Pillow = "^9.3.0"
pydantic = "^1.10.2"
PyDispatcher = "^2.0.6"
"ruamel.yaml" = "^0.17.21"
scipy = [ { version = "1.7.3", python = "3.7" }, { version = "^1.9.3", python = ">=3.8" } ]
suds-py3 = "1.4.5.0"
psutil = "^5.9.4"
gipc = "^1.4.0"
importlib_metadata = { version = ">=4.12.0", python = "3.7" }
py4j = "0.10.9.7"
f90nml = "1.4.3"
lucid3 = "^3.0.0"
PyTango = { version = "^9.3.6", optional = true }
python-ldap = "^3.4.0"
requests = "^2.31.0"
colorama = "^0.4.6"
ispyb-client = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = [ { version = "==2.13.9", python = "<=3.7.1" }, { version = "^2.15.6", python = ">=3.8" } ]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.extras]
tango = ["PyTango"]

[tool.autoflake]
#
# Exclude files below from autoflake checks until we get around fixing them.
# This way we can check that all other files are autoflake clean in CI.
#
exclude = """
deprecated/Command/Exporter/MDClient.py,
deprecated/HardwareObjects/Server/SimpleXMLReadWriteSupport.py,
deprecated/HardwareObjects/SpecShell.py,
deprecated/HardwareObjects/mockup/CameraMockup.py,
mxcubecore/HardwareObjects/ALBA/ALBAFastShutter.py,
mxcubecore/HardwareObjects/ALBA/ALBAFrontEnd.py,
mxcubecore/HardwareObjects/ALBA/ALBAMachineInfo.py,
mxcubecore/HardwareObjects/ALBA/ALBASupervisor.py,
mxcubecore/HardwareObjects/ALBA/XalocMachineInfo.py,
mxcubecore/HardwareObjects/EMBL/EMBLBeamline.py,
mxcubecore/HardwareObjects/EMBL/EMBLBeamlineTest.py,
mxcubecore/HardwareObjects/EMBL/EMBLFlux.py,
mxcubecore/HardwareObjects/EMBL/EMBLPiezoMotor.py,
mxcubecore/HardwareObjects/EMBL/EMBLXrayImaging.py,
mxcubecore/HardwareObjects/EMBL/TINEMotor.py,
mxcubecore/HardwareObjects/ESRF/ID30A1MultiCollect.py,
mxcubecore/HardwareObjects/ESRF/queue_entry/ssx_chip_collection.py,
mxcubecore/HardwareObjects/ESRF/queue_entry/ssx_injector_collection.py,
mxcubecore/HardwareObjects/Gphl/GphlWorkflow.py,
mxcubecore/HardwareObjects/LNLS/EPICSActuator.py,
mxcubecore/HardwareObjects/LNLS/LNLSCollect.py,
mxcubecore/HardwareObjects/LNLS/LNLSDetDistMotor.py,
mxcubecore/HardwareObjects/Lima2Detector.py,
mxcubecore/HardwareObjects/MAXIV/BIOMAXCollect.py,
mxcubecore/HardwareObjects/MAXIV/BIOMAXEiger.py,
mxcubecore/HardwareObjects/MAXIV/BIOMAXMD3Camera.py,
mxcubecore/HardwareObjects/MAXIV/MAXIVAutoProcessing.py,
mxcubecore/HardwareObjects/MAXIV/MAXIVMD2Camera.py,
mxcubecore/HardwareObjects/MAXIV/autoProcLauncher.py,
mxcubecore/HardwareObjects/MAXIV/ednaProcLauncher.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Configuration.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Energy.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Resolution.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Collect.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Qt4_LimaVideo.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Resolution.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Video.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILMachineInfo.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILPss.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILqueue_entry.py,
mxcubecore/HardwareObjects/TangoLimaMpegVideo.py,
mxcubecore/HardwareObjects/XSDataMXCuBEv1_4.py,
mxcubecore/HardwareObjects/XSDataMXv1.py,
mxcubecore/model/common.py,
mxcubecore/model/queue_model_objects.py,
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "poetry.core.masonry.api"
